Refinamiento completo del proyecto TangoDev - Footer: Diseño full-screen con glassmorphism y texto tangodev de fondo - Hero: Contenido escalado y flecha de scroll rediseñada - Pricing: Título con estilo consistente - Favicon y meta tags actualizados - Estilos glassmorphism aplicados a botones - Z-index y posicionamiento optimizados

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/tangodevicono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>TangoDev - Agencia de Desarrollo Web</title>
+    <meta name="description" content="TangoDev es una agencia de desarrollo web independiente y emprendedora, especializada en crear soluciones digitales que transforman ideas en realidades." />
+    <meta name="keywords" content="desarrollo web, agencia web, diseño web, programación, Buenos Aires, Argentina" />
+    <meta name="author" content="TangoDev" />
   </head>
   <body>
     <div id="root"></div>
